--- a/css/style.css
+++ b/css/style.css
@@ -114,58 +114,77 @@ li {
 /* main */
 
 /* section 1-3 */
+
 .container-flex2{
+    width: 1100px;
+    margin: 0 auto;
+    padding: 4rem 0;
     display: flex;
-    height: 430px; 
-    margin-bottom: 50px; 
+    justify-content: center; 
 }
 
 .section-item{
-    flex-basis: 628px;
+    flex-basis: 0;
     flex-grow: 1;
     flex-shrink: 0;
 }
 
 .section-item1{
-    flex-basis: 300px;
-    flex-grow: 1;
-    flex-shrink: 0;
-    margin-left: -200px;
-}
-
-.section-testo{
-    font-size: 48px;
-    padding-top: 32px;
-    padding-bottom: 30px;
-    
-}
-
-.section-testo1{
-    font-size: 19px;
-    line-height: 1.5rem;
-   }
-
-   /* section2 */
-
-   .sfondo{
-    background-color: aqua;
-   }
-
-   .section-item2{
-    flex-basis: 300px;
-    flex-grow: 1;
-    flex-shrink: 0;
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-.section-item3{
     flex-basis: 0;
     flex-grow: 1;
     flex-shrink: 0;
-    margin-left: -300px;
 }
 
-.top1{
-    margin-bottom: 4rem;
+.section-testo{
+    font-size: 39px;
+    padding-top: 32px;
+    padding-bottom: 30px;
+}
+
+.section-testo1{
+    font-size: 16px;
+    line-height: 2rem;
+   }
+
+  .container-flex3{
+    width: 1100px;
+    margin: 0 auto ;
+    padding: 4rem 0;
+    display: flex;
+    justify-content: center; 
+    flex-direction: row-reverse;
+  }
+
+  .backcolor{
+    background-color:#F6F6F6 ;
+    padding: 4rem 0;
+  }
+
+  .testo-centro{
+    text-align: center;
+  }
+
+  .container-text{
+    width: 1100px;
+    height: 200px;
+  }
+  .section-testo2{
+    font-size: 25px;
+    text-align: center;
+  }
+
+  .container-flex4{
+    width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center; 
+}
+
+.header-item2{
+    margin-top: 3em;
+}
+
+.btn-violet {
+	background-color: #7289DA;
+	color: white;
 }
