--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ nav{
 	height: 4em;
 }
 
-ul {
+nav > ul {
 	display: flex;
 	height: 100%;
 }
@@ -187,4 +187,69 @@ li {
 .btn-violet {
 	background-color: #7289DA;
 	color: white;
+}
+
+/* footer */
+
+footer{
+    background-color: black;
+}
+
+.container-flex5{
+    width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    border-bottom:0.1em solid #7289DA;
+}
+
+.menu-top1  {
+	display: flex;
+    justify-content: space-between;
+	align-items: flex-start;
+	height: 500px;
+	padding: 0 1em;
+	margin: 0 auto;
+	color:white;
+	text-decoration: none;
+    padding-top: 4em;
+}
+
+#Titolo-lista{
+    color:#7289DA ;
+}
+
+.distanza-scritte{
+    line-height: 2rem;
+}
+
+.foto-dimensione{
+    width: 50px;
+    height: 30px;
+}
+
+.selettore{
+    margin-left: 1em;
+    color: white;
+    background-color: black;
+    border: none;
+    margin-top: 2em;
+}
+
+.icone-margine{
+    width: 50px;
+    height: 30px;
+    margin-left: 0.1em;
+    margin-top: 2em;
+}
+
+.container-flex6{
+    width: 1100px;
+    margin: 1em auto 4em;
+    display: flex;
+    justify-content: flex-end; 
+}
+
+.ultima-img{
+    margin-top:-3em ;
 }
